--- a/src/main/resources/templates/Viestiketju.html
+++ b/src/main/resources/templates/Viestiketju.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
-    <head>
-        <title>testi</title>
+ 
+     <head>
+        <title>Otsikko</title>
         <meta charset="utf-8" />
     </head>
-
+ 
     <body>
-        testi
+        <h1><span th:text="${viestiketju.aihe}">viestiketju</span>!</h1>
+ 
+        
+        
+        <ol>
+            <li th:each="viesti: ${viestit}">
+                <span th:text="${viesti}"> jipii</span> &nbsp; &nbsp;  Rakkaudella  <a th:text="${kayttaja.nimi}"> jotain </a> <a th:text="${viesti.aika}"> jotain</a>
+            </li>
+        </ol>
+        
+        Lisaa oma viesti tasta, viestin max pituus on 300 merkkia.
+        <form action="/s/foorumi/viestinlisays" method="POST">
+            <input type="text" name="sisalto"/>
+            <input type="submit"/>
+        </form>
     </body>
 </html>
