--- a/src/main/resources/templates/salaisuus.html
+++ b/src/main/resources/templates/salaisuus.html
@@ -20,6 +20,11 @@
             <input type="text" name="aihe"/>
             <input type="submit"/>
         </form>
+        viestien poisto
+        <form action="/s/foorumi/viestienpoisto" method="POST">
+            <input type="text" name="aihe"/>
+            <input type="submit"/>
+        </form>
     </body>
     
 </html>
